# UniversalConverter

./: .gitignore  CMakeLists.txt  FastBuild.bat  FullBuild.bat  README.md  resources.qrc
src/app/: CMakeLists.txt  convertermiddleman.cpp  convertermiddleman.h  main.cpp  mainwindow.cpp  mainwindow.h  temperature.cpp  temperature.h  temperatureconverter.cpp  temperatureconverter.h  units.json
styles/: dark.qss
